<resources>
    <string name="app_name">No Wait</string>
    <string name="action_settings">Settings</string>
    <string name="esquecisenha">Esqueci minha senha</string>
    <string name="direitos">© 2016 por Cozinha Chef.</string>
    <string name="direitos1">Criado por WTK</string>
    <string name="buttonentrar">Entrar</string>
    <string name="email">Digite seu E-mail</string>
    <string name="senha">Digite sua Senha</string>
    <string name="sobre">Conheça Chef Cozinha</string>
    <string name="buttonreserva">Ver Reserva</string>
    <string name="buttoncardapio">Cardápio</string>
    <string name="tarefa">Selecione um Restaurante</string>
    <string name="buttonvoltar">Voltar</string>
    <string name="buttonsair">Sair</string>
    <string name="buttoncasdatro">Cadastrar</string>
    <string name="nome">Digite seu Nome</string>
    <string name="emailcadastro">E-mail</string>
    <string name="cpf">Digite seu CPF</string>
    <string name="adm">Lista Usuário</string>
    <string name="cartao">Digite seu Cartão</string>
    <string name="senhaCad">Digite uma Senha</string>
    <string name="tempo">Tempo Estimado</string>
    <string name="buttonfinalizar">Finalizar Pedido</string>
    <string name="atencao">Atenção! O tempo estimado informado irá</string>
    <string name="atencao1">influenciar no preparo do seu pedido.</string>
    <string name="descricao"> Desfrute do ambiente que oferece este restaurante, onde é possível escolher entre a grande variedade de pratos.
        O nosso pessoal está à sua disposição e prontos para oferecer o melhor serviço </string>
    <string name="contato"> Contato</string>
    <string name="contato1"> Avenida Senador Vergueiro - 4600 - Rudge Ramos - SBC</string>
    <string name="contato2"> Tel.: (011) 2191-0001 / 4366-0001 </string>
    <string-array name="testes">
        <item>Cozinha Chef.</item>
    </string-array>
    <string-array name="testeteste">
        <item>Dia 08 das 17 às 19 - Paulo (Mesa 1)</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
