<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/logo"
        android:orientation="vertical"
        android:layout_marginTop="1dp"/>

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textSize="20dp"/>

    <TextView
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contato"
        android:textColor="#ffffff"
        android:paddingLeft="140dp"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contato1"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contato2"
        android:textColor="#ffffff"
        android:paddingLeft="30dp"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/btnvoltar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:onClick="voltar"
        android:textColor="@color/backblack"
        android:background="@drawable/botaopad"
        android:text="@string/buttonvoltar" />

</LinearLayout>