<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/logo"
        android:orientation="vertical"
        android:layout_marginTop="1dp"/>

    <Button
        android:id="@+id/btnsobre"
        android:layout_marginTop="50dp"
        android:layout_width="340dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:onClick="sobre"
        android:background="@drawable/botaopad"
        android:text="@string/sobre"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btncardapio"
        android:layout_marginTop="20dp"
        android:layout_width="340dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:onClick="cardapio"
        android:background="@drawable/botaopad"
        android:text="@string/buttoncardapio"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnreserva"
        android:layout_marginTop="20dp"
        android:layout_width="340dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:onClick="reserva"
        android:text="@string/buttonreserva"
        android:background="@drawable/botaopad"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnvoltar"
        android:layout_marginTop="70dp"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:onClick="voltar"
        android:background="@drawable/botaopad"
        android:text="@string/buttonvoltar"
        android:textSize="20sp"/>

</LinearLayout>